<resources>
  <string name="app_name">inmobiliaria</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_home">Home</string>
  <string name="menu_gallery">Gallery</string>
  <string name="menu_slideshow">Slideshow</string>
  <string name="inicio">inicio</string>
  <string name="inmueble">inmueble</string>
  <string name="perfil">Perfil</string>
  <string name="Inmueble">Inmueble</string>
  <string name="Inicio">Inicio</string>
  <string name="contrato">Contrato</string>
  <string name="inquilino">Inquilino</string>
  <string name="logout">Logout</string>
  <string name="detalle_inmueble">Detalle inmueble</string>
</resources>