<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_inicio"
        android:icon="@drawable/inicio"
        android:title="@string/Inicio" />
    <item
        android:id="@+id/nav_perfil"
        android:icon="@drawable/perfil"
        android:title="@string/perfil" />
    <item
        android:id="@+id/nav_inmueble"
        android:icon="@drawable/inmueble"
        android:title="@string/Inmueble" />
    <item
        android:id="@+id/nav_inquilino"
        android:icon="@drawable/inquilino"
        android:title="@string/inquilino" />
    <item
        android:id="@+id/nav_contrato"
        android:icon="@drawable/contrato"
        android:title="@string/contrato" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout"
        android:title="@string/logout" />


  </group>
</menu>