<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

  <fragment
      android:id="@+id/nav_inicio"
      android:name="com.example.inmobiliaria.ui.main.inicio.InicioFragment"
      android:label="@string/inicio"
      tools:layout="@layout/fragment_inicio" />

  <fragment
      android:id="@+id/nav_perfil"
      android:name="com.example.inmobiliaria.ui.main.perfil.PerfilFragment"
      android:label="perfil"
      tools:layout="@layout/fragment_perfil" />

  <fragment
      android:id="@+id/nav_inmueble"
      android:name="com.example.inmobiliaria.ui.main.inmueble.InmuebleFragment"
      android:label="@string/inmueble"
      tools:layout="@layout/fragment_inmueble" >
    <action
        android:id="@+id/action_nav_inmueble_to_detalleInmuebleFragment"
        app:destination="@id/detalleInmuebleFragment" />
  </fragment>

  <fragment
      android:id="@+id/nav_inquilino"
      android:name="com.example.inmobiliaria.ui.main.inquilinos.InquilinoFragment"
      android:label="Inquilino"
      tools:layout="@layout/fragment_inquilino" />

  <fragment
      android:id="@+id/nav_contrato"
      android:name="com.example.inmobiliaria.ui.main.contratos.ContratoFragment"
      android:label="Contrato"
      tools:layout="@layout/fragment_contrato" />

  <fragment
      android:id="@+id/nav_logout"
      android:name="com.example.inmobiliaria.ui.main.logout.LogoutFragment"
      android:label="Logout"
      tools:layout="@layout/fragment_logout" />
  <fragment
      android:id="@+id/detalleInmuebleFragment"
      android:name="com.example.inmobiliaria.ui.main.inmueble.DetalleInmuebleFragment"
      android:label="@string/detalle_inmueble"
      tools:layout="@layout/fragment_detalle_inmueble" >
    <action
        android:id="@+id/action_detalleInmuebleFragment_to_nav_inmueble"
        app:destination="@id/nav_inmueble" />
  </fragment>


</navigation>